res/res_pjsip_notify.c
@@ -840,7 +840,7 @@ static char *cli_notify(struct ast_cli_entry *e, int cmd, struct ast_cli_args *a
 		e->usage =
 			"Usage: pjsip send notify <type> {endpoint|uri} <peer> [<peer>...]\n"
 			"       Send a NOTIFY request to an endpoint\n"
-			"       Message types are defined in sip_notify.conf\n";
+			"       Message types are defined in pjsip_notify.conf\n";
 		return NULL;
 	case CLI_GENERATE:
 		if (a->argc > 4 && (!strcasecmp(a->argv[4], "uri"))) {
